# Chaum-Pederson-ZKP-gRPC

./: .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
.sqlx/: query-0750604c0736954b6e008a3291ec84b789546eb6cc0cb79fc20ae4f1d47af7b3.json  query-152cc394d1d5c76b14b82a8e39d709c9323f2f7058a85e398a4d2991a97e9cf1.json  query-57e0a247d0c5d869f08074d636bffcd10925626e8cb784584990fe0e41f8bb76.json  query-742b9eef92ad404b3b1ec285ce8b99e945b1b910f25bff376466c704a79fc9c8.json  query-769db5ddd53901ef29963b009115e40b334b4d29307f50ff9acb593032d470cf.json  query-798c023218f4bd2d625aa97f64ac5b8af201330d692791aa8400c7d87254ceb9.json  query-d0c227568a9ab8439b98f868840355fd4812697f9a7693f744e21f266de931f1.json  query-e827619d3de20cc044ae4e760d21618f27a3c993f04444ffc28572e10cae9483.json  query-f7a1a096af1eee24e9ac031adce229c1e3daabdb46c4fb4a25ba32a8ea29b546.json
migrations/: 001_init.sql
proto/: zkp_auth.proto
src/: client.rs  db.rs  lib.rs  server.rs  test_utils.rs  zkp_auth.rs
