[package]
name = "chaum-pederson-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
hex = "0.4.3"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] } # async rust runtime
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6.1.0"
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["macros", "runtime-tokio-rustls", "postgres", "chrono"] }
chrono = "0.4.44"
dotenvy = "0.15"
uuid = { version = "1.23.1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["net"] }
num-traits = "0.2.19"

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "server"
path = "./src/bin/server.rs"

[[bin]]
name = "client"
path = "./src/bin/client.rs"

